# wise

./: .env.example  .env.production.example  .gitignore  .opencode.jsonc  ANDROID.md  ARCHITECTURE.md  CONTRIBUTING.md  Competitive Landscape.docx  DEPLOY.md  README.md  RELEASE.md  Splitwise Competitor Brainstorm.docx  TESTING.md  backend_stderr.txt  deploy.sh  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  index.html  install-and-debug.ps1  nginx.conf  run.ps1  setup-vps.sh  test_pay.json  test_split.json  wait_run.ps1  wrangler.jsonc
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  e2e.yml
ai_service/: Dockerfile  main.py  prompt.txt  railway.toml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.prod  fly.toml  railway.toml
backend/src/: ai.rs  db.rs  error.rs  main.rs  models.rs  state.rs
backend/src/routes/: guest.rs  mod.rs  splits.rs  ws.rs
backend/tests/: api_tests.rs
frontend/: .env.android.example  .env.example  .gitignore  Dockerfile  README.md  VISUAL-CHECKLIST.md  capacitor.config.ts  eslint.config.js  fly.toml  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  wrangler.toml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/app/wise/split/: MainActivity.java
frontend/android/app/src/main/res/values/: colors.xml  strings.xml
frontend/playwright-report/: index.html
frontend/public/: privacy.html
frontend/src/: App.tsx  config.test.ts  config.ts  index.css  main.tsx  schemas.test.ts  schemas.ts  upi.ts
frontend/src/components/: ConfettiOverlay.tsx  CreateSplit.tsx  GuestView.tsx  GuestWrapper.tsx  HistoryScreen.tsx  HomeScreen.tsx  ItemAssignment.tsx  OnboardingScreen.tsx  ParticipantList.tsx  ProcessingScreen.tsx  QRCodeCanvas.tsx  ReceiptUpload.tsx  SplitSummary.tsx  TaxTipModal.tsx  Toast.tsx
frontend/src/hooks/: useApi.test.ts  useApi.ts
frontend/src/offline/: cache.ts  pendingOps.test.ts  pendingOps.ts  useOffline.ts
frontend/tests/: e2e.spec.ts  ui.spec.ts
tools/: e2e.ps1
worker/: .gitignore  Cargo.toml  build.mjs  schema.sql  shim.mjs  wrangler.toml
worker/src/: ai.rs  auth.rs  db.rs  lib.rs  models.rs  ws.rs
