[package]
name = "wise-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wise-server"
path = "src/main.rs"

[dependencies]
# Async runtime - work-stealing, multi-threaded
tokio = { version = "1", features = ["full"] }

# HTTP framework - zero-cost routing, tower middleware compat
axum = { version = "0.7", features = ["multipart", "ws", "macros"] }

# Serialization - zero-copy where possible
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - compile-time verified SQL, WAL mode support
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }

# HTTP client - for Gemini Vision API calls (async, connection pooling)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Tower middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "limit"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Base64 for image encoding to Gemini
base64 = "0.22"

# Error handling
anyhow = "1"
thiserror = "1"

# Env vars
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async stream utilities (for WebSocket split)
futures-util = "0.3"

# Random token generation
rand = "0.8"

# Hex encoding for owner tokens
hex = "0.4"

# Unicode grapheme cluster splitting for emoji validation
unicode-segmentation = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
