[package]
name = "wise-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.4.0", features = ["d1", "r2", "durable"] }
worker-macros = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["wasmbind"] }
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
