[package]
name = "wise-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8.5", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["wasmbind"] }
hex = "0.4"
wasm-bindgen = "=0.2.125"

[profile.release]
opt-level = "s"
lto = true
strip = true
